# telegram_posts_aggregator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  Todo.md  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: push_dockerhub.yml  run_tests.yml
alembic/: env.py
alembic/versions/: 188f809ad7a8_init.py  32710749553f_add_channel_type.py  3884a621bef1_add_original_msg_id.py  5449fbd7e244_init_v2.py  64a1d73f3453_create_a_post_storage.py  bf2c897124a9_change_channel_model.py  cba6952028e3_init.py  d0a7184a6635_add_constrain_for_message_uniqness.py
documentaion/diagrams/drawio_sources/: metadata_db.drawio  overview_diagram.drawio
src/: __main__.py  config.py  craete_bot.py  create_client.py  handlers.py  models.py  posts_storage.py  registered_messages.py  telegram_slow_client.py  utils.py
src/aggregator/: __main__.py  config.py  models.py  posts_storage.py
src/aggregator/bot/: create_bot.py
src/aggregator/bot/warden/: warden.py
src/aggregator/telegram_agent/: create_agent.py
src/bot/: craete_bot.py  create_bot.py  posts_storage.py
src/bot/warden/: warden.py
src/telegram_agent/: create_agent.py  registered_messages.py
src/warden/: time_range.py  warden.py
tests/: test_create_bot.py  test_registered_messages.py  test_time_range.py  test_warden.py
utilities/: generate_session.py  render_diagram.sh
