[tool.poetry]
name = "telegram-posts-aggregator"
version = "0.1.0"
description = ""
authors = ["andrei_borisevich <andreyborisevichleti@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_posts_aggregator"}]

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.33.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
