[tool.poetry]
name = "telegram-posts-aggregator"
version = "0.1.0"
description = ""
authors = ["Andrei Borisevich <andreyborisevichleti@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_posts_aggregator"}]

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.37.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pendulum = "^3.0.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.3"
sqlalchemy-stubs = "^0.4"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
